--- a/audiro/src/main/webapp/static/css/plan_list.css
+++ b/audiro/src/main/webapp/static/css/plan_list.css
@@ -3,23 +3,32 @@
 #allDiv{
 	margin-top: 50px;
 }
-.tableList table thead {
+
+.tableList .table thead th {
     background: #27334c;
     color: #ffffff;
 }
+
 tbody {
     display: table-row-group;
     vertical-align: middle;
     unicode-bidi: isolate;
-    border-color: inherit;
+    border-collapse: collapse;
 }
+
 table {
     border-collapse: collapse;
     margin-left: auto;
 	margin-right: auto;
-	font-size: 20px;
+	font-size: 15px;
 	height: 100%;
 	table-layout: fixed;
+}
+
+thead th,
+tbody td {
+    border: none;
+    text-align: center;
 }
 
 user agent stylesheet
@@ -31,18 +40,16 @@ table {
 
 td, th {
 	/* font-family: 'Cafe24SsurroundAir'; */
-	border: 1px solid black;
+	border: none;
 	padding: 20px;
     text-align: left; /* Change text alignment to left */
     padding: 20px;
 }
 
-td.img{
-	 width: 5%;
-}
+
 img.deletePlanImg{
-	max-width: 100%; /* 이미지의 최대 너비를 부모 요소(td)의 너비에 맞추기 */
-    height: auto; /* 비율 유지를 위해 height를 auto로 설정 */
+	max-width: 100%; 
+    height: 20px; 
 }
 
 .link{
